// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState Snapshots renders default state correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 32,
      "paddingVertical": 64,
    }
  }
  testID="empty-state"
>
  <View
    style={
      {
        "marginBottom": 24,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 64,
          "textAlign": "center",
        }
      }
    >
      📭
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#111827",
        "fontSize": 24,
        "fontWeight": "bold",
        "marginBottom": 12,
        "textAlign": "center",
      }
    }
  >
    No Posts Yet
  </Text>
  <Text
    style={
      {
        "color": "#6B7280",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 32,
        "textAlign": "center",
      }
    }
  >
    Start following people or create your first post to see content in your feed.
  </Text>
</View>
`;

exports[`EmptyState Snapshots renders loading state correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 32,
        "paddingVertical": 64,
      },
      {
        "backgroundColor": "#F9FAFB",
      },
    ]
  }
  testID="empty-state-loading"
>
  <View
    style={
      {
        "backgroundColor": "#F3F4F6",
        "borderRadius": 32,
        "height": 64,
        "marginBottom": 24,
        "width": 64,
      }
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#F3F4F6",
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "height": 24,
          "width": 200,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#F3F4F6",
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "height": 16,
          "width": 280,
        },
      ]
    }
  />
</View>
`;

exports[`EmptyState Snapshots renders loading state with action button correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 32,
        "paddingVertical": 64,
      },
      {
        "backgroundColor": "#F9FAFB",
      },
    ]
  }
  testID="empty-state-loading"
>
  <View
    style={
      {
        "backgroundColor": "#F3F4F6",
        "borderRadius": 32,
        "height": 64,
        "marginBottom": 24,
        "width": 64,
      }
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#F3F4F6",
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "height": 24,
          "width": 200,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#F3F4F6",
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "height": 16,
          "width": 280,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#F3F4F6",
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "borderRadius": 8,
          "height": 44,
          "marginTop": 20,
          "width": 120,
        },
      ]
    }
  />
</View>
`;

exports[`EmptyState Snapshots renders with action button correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 32,
      "paddingVertical": 64,
    }
  }
  testID="empty-state"
>
  <View
    style={
      {
        "marginBottom": 24,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 64,
          "textAlign": "center",
        }
      }
    >
      📭
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#111827",
        "fontSize": 24,
        "fontWeight": "bold",
        "marginBottom": 12,
        "textAlign": "center",
      }
    }
  >
    No Posts Yet
  </Text>
  <Text
    style={
      {
        "color": "#6B7280",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 32,
        "textAlign": "center",
      }
    }
  >
    Start following people or create your first post to see content in your feed.
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#7C3AED",
        "borderRadius": 8,
        "minWidth": 120,
        "opacity": 1,
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      }
    }
    testID="empty-state-action"
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 16,
          "fontWeight": "600",
          "textAlign": "center",
        }
      }
    >
      Create Post
    </Text>
  </View>
</View>
`;

exports[`EmptyState Snapshots renders with custom testID correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 32,
      "paddingVertical": 64,
    }
  }
  testID="custom-empty-state"
>
  <View
    style={
      {
        "marginBottom": 24,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 64,
          "textAlign": "center",
        }
      }
    >
      📭
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#111827",
        "fontSize": 24,
        "fontWeight": "bold",
        "marginBottom": 12,
        "textAlign": "center",
      }
    }
  >
    No Posts Yet
  </Text>
  <Text
    style={
      {
        "color": "#6B7280",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 32,
        "textAlign": "center",
      }
    }
  >
    Start following people or create your first post to see content in your feed.
  </Text>
</View>
`;

exports[`EmptyState Snapshots renders with long title and description correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 32,
      "paddingVertical": 64,
    }
  }
  testID="empty-state"
>
  <View
    style={
      {
        "marginBottom": 24,
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 64,
          "textAlign": "center",
        }
      }
    >
      📭
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#111827",
        "fontSize": 24,
        "fontWeight": "bold",
        "marginBottom": 12,
        "textAlign": "center",
      }
    }
  >
    Your Investment Portfolio is Currently Empty
  </Text>
  <Text
    style={
      {
        "color": "#6B7280",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 32,
        "textAlign": "center",
      }
    }
  >
    You haven't made any investments yet. Explore our curated pools and start building your diversified cryptocurrency portfolio today. Our expert-managed pools offer various risk levels and investment strategies.
  </Text>
</View>
`;
